# log-detective

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.sisyphus/plans/: log-detective-roadmap.md
src/: __init__.py  cli.py
src/analyzer/: __init__.py
src/analyzer/tools/: __init__.py
src/history/: __init__.py
src/indexer/: __init__.py
src/monitor/: __init__.py
src/notifier/: __init__.py
src/parsers/: __init__.py  base.py  detector.py  java.py  python.py
tests/: __init__.py  test_parsers.py
